# mlops-uni

./: .gitignore  pyproject.toml
project1/: config.py  modules.py
project1/scripts/: hpo.py  save_images.py  train.py
project1/service/: load_checkpoint.py  service.py
