[project]
name = "mlops-uni"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Nikita Makarevich", email = "nikita_makarevich@yahoo.com" },
]
dependencies = [
    "torch>=2.9.1",
    "lightning>=2.5.6",
    "wandb>=0.23.0",
    "pandas>=2.3.3",
    "numpy>=2.3.5",
    "jupyter>=1.1.1",
    "torchvision>=0.24.1",
    "optuna>=4.6.0",
    "optuna-integration[pytorch-lightning,wandb]>=4.6.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "torchmetrics>=1.8.2",
    "bentoml>=1.4.30",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
include_packages = ["torch", "torchvision"]
